# graphix

./: Cargo.toml  README.md
graphix/: Cargo.toml
graphix/src/: dialect.rs  entity.rs  hcl.rs  lib.rs
graphix/src/entity/: attribute.rs  field.rs  field_type.rs
graphix_macros/: Cargo.toml
graphix_macros/src/: entity.rs  lib.rs
graphix_macros/src/macros/: entity.rs
graphix_macros/src/sql/: postgres.rs
graphix_models/: Cargo.toml
graphix_models/src/: descriptor.rs  entity.rs  lib.rs
graphix_models/src/sql/: postgres.rs
graphix_test/: Cargo.toml
graphix_test/src/: main.rs
