[package]
name = "graphix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphix_macros = { path = "../graphix_macros" }
hcl-rs = { version = "0.16.9", features = ["perf"] }
serde = "1.0.201"
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "serde-human-readable", "serde-well-known"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
